--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,14 +15,15 @@
 
     <!-- HomeActivity texts -->
     <string name="home_b_region_list">Browse by Region</string>
+    <string name="home_b_country_list">Browse by Country</string>
     <string name="home_b_attack_list">Browse All Attacks</string>
 
     <!-- RegionListActivity texts -->
-    <string name="region_list_title">GTD Browser > Regions</string>
-    <string name="region_list_sp_return_format_prompt">Webservice return format</string>
-    <string name="region_list_b_load">Load</string>
-    <string name="region_list_b_clear_db">Clear DB</string>
-    <string name="region_list_tv_empty">0 regions found</string>
+    <string name="filtered_list_title">GTD Browser > Filtered</string>
+    <string name="filtered_list_sp_filter_prompt">Choose Filter</string>
+    <string name="filtered_list_b_load">Load</string>
+    <string name="filtered_list_b_clear_db">Clear DB</string>
+    <string name="filtered_list_tv_empty">0 regions found</string>
     
     <string name="attack_list_title">GTD Browser > Attacks</string>
     <string name="attack_list_tv_empty">0 attacks found</string>
