--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="home_b_attacktype_list">Browse All Attack Types</string>
     <string name="home_b_attack_list">Browse All Attacks</string>
     
-    <!-- RegionListActivity texts -->
+    <!-- FilteredListActivity texts -->
     <string name="filtered_list_title">GTD Browser > Filtered</string>
     <string name="filtered_list_sp_filter_prompt">Choose Filter</string>
     <string name="filtered_list_b_load">Load</string>
@@ -28,4 +28,6 @@
     
     <string name="attack_list_title">GTD Browser > Attacks</string>
     <string name="attack_list_tv_empty">0 attacks found</string>
+    
+    <string name="attack_detail_title">GTD Browser > Attack Detail</string>
 </resources>
